CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS On)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)

INCLUDE(CheckTypeSize)
INCLUDE(CheckFunctionExists)
INCLUDE(CheckIncludeFile)
INCLUDE(CheckCSourceCompiles)

ENABLE_TESTING()
ENABLE_LANGUAGE(CXX)

PROJECT(ray)

SET(ENGINE_DIR ${PROJECT_SOURCE_DIR}/lib/engine)
SET(DEPENDENCIES_PATH ${PROJECT_SOURCE_DIR}/contrib)
SET(SAMPLE_PATH ${PROJECT_SOURCE_DIR}/sample)
SET(TOOLS_PATH ${PROJECT_SOURCE_DIR}/tools)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_BUILD_TYPE "${CMAKE_BUILD_TYPE}" CACHE STRING "One of None Debug Release RelWithDebInfo MinSizeRel" FORCE)

OPTION(BUILD_DEBUG_MODE "ON for debug or OFF for release" ON)
OPTION(BUILD_SSE "on for use off for ignore" OFF)
OPTION(BUILD_UNICODE "on for unicode off for ascii" OFF)

IF(ANDROID_ABI OR CMAKE_SYSTEM_NAME MATCHES "VCMDDAndroid")
    SET(PLATFORM 3)
    SET(VCMDDAndroid 1)
ELSE()
    IF(WIN32)
      SET(PLATFORM 4)
    ELSEIF(UNIX)
        SET(PLATFORM 2)
    ELSE()
        SET(PLATFORM 1)
    ENDIF()
ENDIF()

SET(BUILD_PLATFORM ${PLATFORM} CACHE STRING
"Specify the platform. Possible values:
  1 - Apple
  2 - Linux
  3 - Adnroid
  4 - Windows"
)

IF(BUILD_PLATFORM EQUAL 1)
    SET(BUILD_PLATFORM_APPLE TRUE)
    ADD_DEFINITIONS(-DAPPLE)
    ADD_DEFINITIONS(-D_BUILD_PLATFORM_APPLE)
ELSEIF(BUILD_PLATFORM EQUAL 2)
    SET(BUILD_PLATFORM_LINUX TRUE)
    ADD_DEFINITIONS(-DLINUX)
    ADD_DEFINITIONS(-D_BUILD_PLATFORM_LINUX)
ELSEIF(BUILD_PLATFORM EQUAL 3)
    SET(BUILD_PLATFORM_ANDROID TRUE)
    ADD_DEFINITIONS(-DANDROID)
    ADD_DEFINITIONS(-D_BUILD_PLATFORM_ANDROID)
ELSEIF(BUILD_PLATFORM EQUAL 4)
    SET(BUILD_PLATFORM_WINDOWS TRUE)
    ADD_DEFINITIONS(-DWINDOWS)
    ADD_DEFINITIONS(-D_BUILD_PLATFORM_WINDOWS)
ENDIF()

IF(BUILD_DEBUG_MODE)
    SET(CMAKE_BUILD_TYPE DEBUG)
    ADD_DEFINITIONS(-DDEBUG -D_DEBUG -D__DEBUG__)
ELSE()
    SET(CMAKE_BUILD_TYPE RELEASE)
ENDIF()

IF(BUILD_UNICODE)
    ADD_DEFINITIONS(-DUNICODE)
    ADD_DEFINITIONS(-D_UNICODE)
ENDIF()

IF(MINGW OR UNIX)
    IF(MINGW)
        SET(PLATFORM_NAME "mingw")
    ELSE()
        SET(PLATFORM_NAME "linux")
    ENDIF()
ELSEIF(WIN32 OR WIN64 OR MSVC)
    SET(PLATFORM_NAME "win")
    ADD_DEFINITIONS(-D_WINDOWS)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

    SET(COMPILER_NAME "vc")
    IF(MSVC_VERSION GREATER 1600)
        SET(COMPILER_NAME "11")
    ELSEIF(MSVC_VERSION GREATER 1500)
        SET(COMPILER_NAME "10")
    ELSEIF(MSVC_VERSION GREATER 1400)
        SET(COMPILER_NAME "9")
    ENDIF()
ELSEIF(VCMDDAndroid)
    SET(PLATFORM_NAME "linux")
ENDIF()

IF(CMAKE_GENERATOR MATCHES "ARM")
    SET(LIBRARY_OUT_NAME "ARM")
ELSEIF(CMAKE_GENERATOR MATCHES "Win64")
    SET(LIBRARY_OUT_NAME "64")
    SET(WIN64 TRUE)
ELSEIF(CMAKE_GENERATOR MATCHES "Visual Studio")
    SET(LIBRARY_OUT_NAME "86")
    SET(WIN32 TRUE)
ELSE()
    SET(LIBRARY_OUT_NAME "86")
ENDIF()

# 指定库文件输出路径
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/binaries/${PLATFORM_NAME}${LIBRARY_OUT_NAME})
# 设置编译文件后缀
SET(CMAKE_DEBUG_POSTFIX "_d" CACHE STRING "add a postfix, usually d on windows")
SET(CMAKE_RELEASE_POSTFIX "" CACHE STRING "add a postfix, usually empty on windows")
SET(CMAKE_RELWITHDEBINFO_POSTFIX "" CACHE STRING "add a postfix, usually empty on windows")
SET(CMAKE_MINSIZEREL_POSTFIX "" CACHE STRING "add a postfix, usually empty on windows")

MACRO(SET_TARGET_ATTRIBUTE target directory)
    SET_TARGET_PROPERTIES(${target} PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH}
        ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${LIBRARY_OUTPUT_PATH}
        ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${LIBRARY_OUTPUT_PATH}
        ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${LIBRARY_OUTPUT_PATH}
        ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${LIBRARY_OUTPUT_PATH}
        LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH}
        LIBRARY_OUTPUT_DIRECTORY_DEBUG ${LIBRARY_OUTPUT_PATH}
        LIBRARY_OUTPUT_DIRECTORY_RELEASE ${LIBRARY_OUTPUT_PATH}
        LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${LIBRARY_OUTPUT_PATH}
        LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${LIBRARY_OUTPUT_PATH}
        RUNTIME_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH}
        RUNTIME_OUTPUT_DIRECTORY_DEBUG ${LIBRARY_OUTPUT_PATH}
        RUNTIME_OUTPUT_DIRECTORY_RELEASE ${LIBRARY_OUTPUT_PATH}
        RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${LIBRARY_OUTPUT_PATH}
        RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${LIBRARY_OUTPUT_PATH}
    )
    SET_TARGET_PROPERTIES(${target} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
    SET_TARGET_PROPERTIES(${target} PROPERTIES PROJECT_LABEL ${target})
    SET_TARGET_PROPERTIES(${target} PROPERTIES FOLDER ${directory})
ENDMACRO()

IF(MINGW OR UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic")

    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W")

    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -finput-charset=utf-8")

    IF(SSE)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse")
    ELSEIF(SSE2)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
    ELSEIF(SSE3)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse3")
    ELSEIF(SSE4)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse3")
    ENDIF()

ELSEIF(WIN32 OR WIN64)
    # 多处理器编译
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")

    # 最小重新生成
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Gm")

    # 运行时类型信息
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR")

    # SEH
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHa")

    # 快速的浮点模型
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fp:fast")

    IF(NOT BUILD_DEBUG_MODE)
        SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")

        SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2")
        SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ob2")
        SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ot")
        #SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Oi")
        SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
    ELSE()
        SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
    ENDIF()

    IF(BUILD_SSE)
        SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /arch:SSE")
    ENDIF()

    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W0")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W0")
ELSE(VCMDDAndroid)
    SET(UNIX TRUE)

    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frtti")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")

    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wreorder") # field 'x' will be initialized after field 'y'
ENDIF()

# 添加依赖库
ADD_SUBDIRECTORY(contrib)

IF(WIN32 OR WIN64)
    # 设置错误提示
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Wall")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4061") # 枚举数没有被 case 标签显式处理
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4100") # 未引用的形参
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4191") # 不安全的函数转换
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4548") # 逗号前的表达式不起任何作用；应输入带副作用的表达式
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4201")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4242") # 从“const int”转换到“BYTE”，可能丢失数据
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244") # 从“int”转换到“unsigned char”，可能丢失数据
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251") # needs to have dll-interface to be used by clients of class
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4265") # 类有虚函数，但析构函数不是虚拟的
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4267") # 从“size_t”转换到“int”，可能丢失数据
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4275") #  非 dll 接口 class“std::exception”用作 dll 接口 class“MyGUI::Exception”的基
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4305")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4350") # 行为更改
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4355") # “this”: 用于基成员初始值设定项列表
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4365") # 不安全的整数转换
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4371") # 类的布局可能与早期版本的编译器有所不同
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4435") # 虚拟继承
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4480")
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4481")

    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4514") # “func” 未引用的内联函数已移除
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4548")
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4571")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4625") #未能生成复制构造函数，因为基类复制构造函数不可访问或已被删除
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4626") #未能生成赋值运算符，因为基类赋值运算符不可访问或已被删除
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4640") #本地静态对象的结构是非线程安全的
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4668") # 没有将“symbol”定义为预处理器宏，用“0”替换“directives”
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4710") # “function”: 函数未内联
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4711") # "function":自动内联
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4820") # “bytes”字节填充添加在构造“member_name”之后
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4836")
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4986") # 异常规范与前面的声明不匹配
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4996") # _CRT_SECURE_NO_WARNINGS
ENDIF()

# 添加项目
ADD_SUBDIRECTORY(source)

# 例子
ADD_SUBDIRECTORY(sample)

# 工具
ADD_SUBDIRECTORY(tools)