CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES(${INCLUDE_PATH})

IF(BUILD_OPENGL_ES)
    INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/gles/include)
    LINK_DIRECTORIES(${DEPENDENCIES_PATH}/gles/lib)
ENDIF()

FOREACH(samples
    cubes
    SSRR
    SSSSS
    UI
)
ADD_SUBDIRECTORY(${samples})

SET_TARGET_ATTRIBUTE(${samples} "samples")

ENDFOREACH()